--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -59,7 +59,7 @@
               <li class="active"><a href="list.html">従業員管理</a></li>
             </ul>
             <p class="navbar-text navbar-right">
-              <span th:text="${session.administratorName + 'さん'}"
+              <span th:text="${session.administratorName.name + 'さん'}"
                 >山田さん</span
               >こんにちは！ &nbsp;&nbsp;&nbsp;
               <a href="../administrator/login.html" class="navbar-link"
@@ -105,7 +105,7 @@
                   <span th:text="${employee.hireDate}">2016/12/1</span>
                 </td>
                 <td>
-                  <span th:text="${employee.dependentsCount}">3人</span>
+                  <span th:text="${employee.dependentsCount + '人'}">3人</span>
                 </td>
               </tr>
             </tbody>
