--- a/src/main/resources/templates/administrator/login.html
+++ b/src/main/resources/templates/administrator/login.html
@@ -44,8 +44,8 @@
               <fieldset>
                 <legend>ログイン</legend>
                 <div class="form-group">
-                  <div class="alert alert-danger">
-                    <p th:if="${session.administratorName == null}" th:text="${message}">メールアドレスまたはパスワードが間違っています</p>
+                  <div class="alert alert-danger" th:if="${session.administratorName == null}">
+                    <p th:text="${message}">メールアドレスまたはパスワードが間違っています</p>
                   </div>
                 </div>
                 <div class="form-group">
