--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -59,7 +59,7 @@
               <li class="active"><a href="list.html">従業員管理</a></li>
             </ul>
             <p class="navbar-text navbar-right">
-              <span th:text="${session.administratorName + 'さん'}"
+              <span th:text="${session.administratorName.name + 'さん'}"
                 >山田さん</span
               >こんにちは！ &nbsp;&nbsp;&nbsp;
               <a href="../administrator/login.html" class="navbar-link"
@@ -89,7 +89,7 @@
           <div class="well">
             <!-- ここから上を編集する必要はありません -->
 
-            <form method="post" action="list.html">
+            <form method="post" action="list.html" th:action="@{/employee/update}" th:object="${updateEmployeeForm}">
               <fieldset>
                 <legend>従業員情報</legend>
                 <table class="table table-striped">
@@ -166,13 +166,13 @@
                         style="color: red"
                         for="dependentsCount"
                       ></label>
-                      <input type="hidden" name="id" />
+                      <input type="hidden" name="id" th:value="${employee.id}"/>
                       <input
                         type="text"
                         name="dependentsCount"
                         id="dependentsCount"
                         class="form-control"
-                        value="3"
+                        th:value="${employee.dependentsCount}"
                       />
                     </td>
                   </tr>
