--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -46,6 +46,7 @@
                   管理者登録<br />(システムにログインできる管理者を登録します)
                 </legend>
                 <!-- 氏名 -->
+                 <div th:errors="*{name}" style="color:red"></div>
                 <div class="form-group">
                   <div class="row">
                     <div class="col-sm-12">
@@ -65,6 +66,7 @@
                   </div>
                 </div>
                 <!-- メールアドレス -->
+                <div th:errors="*{mailAddress}" style="color:red"></div>
                 <div class="form-group">
                   <div class="row">
                     <div class="col-sm-12">
@@ -84,6 +86,7 @@
                   </div>
                 </div>
                 <!-- パスワード -->
+                <div th:errors="*{password}" style="color:red"></div>
                 <div class="form-group">
                   <div class="row">
                     <div class="col-sm-12">
