入力値チェックを追加

--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -160,6 +160,7 @@
                     <td>
                       <label class="error-messages">
                         扶養人数を入力してください
+                      <div th:errors="*{dependentsCount}" style="color:red"></div>                    
                       </label>
                       <label
                         class="control-label"
